Otros cambios y nueva seccion agregada

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link href="./style/presentacion/presentacion.css" rel="stylesheet" />
     <link href="./style/viajes/viajes.css" rel="stylesheet" />
     <link href="./style/boton_arriba/boton_arriba.css"rel="stylesheet" />
+    <link href="./style/ofertas/ofertas.css"rel="stylesheet" />
 
 
 </head>
@@ -82,13 +83,158 @@
     </section>
     <!--! FIN SECCION PRESENTACION -->
 
+    
+
+
+
+
     <!--? SECCION PARA LOS VIAJES -->
     <section id="viajes">
+        <div class="contenedor_viajes">
+            <h2 class="viajes_titulo">¡Nuestras Excursiones!</h2>
 
+            <div class="contenedor_carta  contenedor_excursion--buggys">
+            <div class="cartas_excursiones">
+                <div class="foto_excursion">
+
+                    <div class="slider slider1">
+                        <div class="list">
+                            <div class="item">
+                                <img src="./recursos/fotos/Excursiones/buggy-1-min.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="./recursos/fotos/Excursiones/buggy-2-min.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="./recursos/fotos/Excursiones/buggy-3-min.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="./recursos/fotos/Excursiones/buggy-4-min.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="./recursos/fotos/Excursiones/buggy-5-min.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="./recursos/fotos/Excursiones/buggy-6-min.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="./recursos/fotos/Excursiones/buggy-7-min.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="./recursos/fotos/Excursiones/buggy-8-min.png" alt="">
+                            </div>
+                        </div>
+                        <div class="buttons">
+                            <button class="prev"><img src="./recursos/iconos/izquierda-flecha.png" alt="flecha"></button>
+                            <button class="next"><img src="./recursos/iconos/derecha-flecha.png" alt="flecha"></button>
+                        </div>
+                        <ul class="dots">
+                            <li class="active"></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="informacion_excursion">
+                    <h3 class="informacion_titulo">El Tour De Los Buggys</h3>
+                    <div class="informacion_iconos">
+                        <img src="./recursos/iconos/carro-buggy.png" alt="icono">
+                        <img src="./recursos/iconos/moto-buggy.png" alt="icono">
+                        <img src="./recursos/iconos/excursionismo-buggy.png" alt="icono">
+                    </div>
+                    <p class="informacion_descripcion">Una experiencia inolvidable que te divertirá un montón.EL tour dura aproximadamente <span>2:00/3:00 horas</span>, donde 
+                        le daremos un recorrido a diversas zonas: <span>Playa Macao, Cueva Taina, Casa Típica, y muchas más.</span>
+                    </p>
+                </div>
+            </div>
+
+            <!-- <div class="contenedor_ilustracion">
+                <img src="" alt="ilustracion">
+            </div> -->
+            </div>
+
+            <div class="contenedor_carta contenedor_excursion--caballos">
+            <div class="cartas_excursiones">
+                <div class="foto_excursion">
+
+                    <div class="slider slider2">
+                        <div class="list">
+                            <div class="item">
+                                <img src="./recursos/fotos/Excursiones/caballo-1-min.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="./recursos/fotos/Excursiones/caballo-2-min.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="./recursos/fotos/Excursiones/caballo-3-min.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="./recursos/fotos/Excursiones/caballo-4-min.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="./recursos/fotos/Excursiones/caballo-5-min.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="./recursos/fotos/Excursiones/caballo-6-min.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="./recursos/fotos/Excursiones/caballo-7-min.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="./recursos/fotos/Excursiones/caballo-8-min.png" alt="">
+                            </div>
+                        </div>
+                        <div class="buttons">
+                            <button class="prev"><img src="./recursos/iconos/izquierda-flecha.png" alt="flecha"></button>
+                            <button class="next"><img src="./recursos/iconos/derecha-flecha.png" alt="flecha"></button>
+                        </div>
+                        <ul class="dots">
+                            <li class="active"></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="informacion_excursion">
+                    <h3 class="informacion_titulo">Tour De Caballos</h3>
+                    <div class="informacion_iconos">
+                        <img src="./recursos/iconos/caballo-icono.png" alt="icono">
+                        <img src="./recursos/iconos/excursion-icono.png" alt="icono">
+                        <img src="./recursos/iconos/sol-icono.png" alt="icono">
+                    </div>
+                    <p class="informacion_descripcion">El tour de los caballos, con recorridos hermosos, pasando por <span>diferentes playas </span> hasta llegar a la boca
+                        donde el río conecta con el mar.
+                    </p>
+                </div>
+            </div>
+
+            <!-- <div class="contenedor_ilustracion">
+                <img src="" alt="ilustracion">
+            </div> -->
+            </div>
+        </div>
     </section>
     <!--! FIN SECCION PARA LOS VIAJES -->
 
+    <!--? SECCION PARA OFERTA -->
+    <section id="ofertas">
+        <div class="container_ofertas">
 
+        </div>
+    </section>
+    <!--! FIN SECCION PARA OFERTA -->
 
     <!--? PIE DE PAGINA O FOOTER -->
     <section id="footer">
@@ -176,6 +322,7 @@
     <script src="./scripts/navegacion.js"></script>
     <script src="./scripts/preguntasFrecuentes.js"></script>
     <script src="./scripts/boton_arriba.js"></script>
+    <script src="./scripts/carrusel.js"></script>
 </body>
 
 </html>
