--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
         </header>
         <nav class="menu_opciones">
             <ul class="menu_opciones--links">
-                <li class="menu_opciones--linkOpcion"><a href="#">¿Quiénes somos?</a></li>
-                <li class="menu_opciones--linkOpcion"><a href="#viajes">Viajes</a></li>
-                <li class="menu_opciones--linkOpcion"><a href="#">Ofertas</a></li>
-                <li class="menu_opciones--linkOpcion"><a href="#">Más inf.</a></li>
+                <li class="menu_opciones--linkOpcion"><a href="#viajes">Excursiones</a></li>
             </ul>
         </nav>
         <div class="menu_contacto">
@@ -154,9 +151,10 @@
                 </div>
             </div>
 
-            <!-- <div class="contenedor_ilustracion">
-                <img src="" alt="ilustracion">
-            </div> -->
+            <div class="contenedor_ilustracion contenedor_ilustracion--1">
+                <img class="ilustracion-1" src="./recursos/fotos/excursion-ilustracion.png" alt="ilustracion">
+                <img class="ilustracion-sombra-1" src="./recursos/fotos/sombra.png" alt="sombra">
+            </div>
             </div>
 
             <div class="contenedor_carta contenedor_excursion--caballos">
@@ -220,9 +218,10 @@
                 </div>
             </div>
 
-            <!-- <div class="contenedor_ilustracion">
-                <img src="" alt="ilustracion">
-            </div> -->
+            <div class="contenedor_ilustracion contenedor_ilustracion--2">
+                <img class="ilustracion-2" src="./recursos/fotos/viajes-ilustracion.png" alt="ilustracion">
+                <img class="ilustracion-sombra-2" src="./recursos/fotos/sombra.png" alt="sombra">
+            </div>
             </div>
         </div>
     </section>
