Agregando animacion aparecer

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="contenedor_viajes">
             <h2 class="viajes_titulo">¡Nuestras Excursiones!</h2>
 
-            <div class="contenedor_carta  contenedor_excursion--buggys">
+            <div class="contenedor_carta  contenedor_excursion--buggys elemento">
             <div class="cartas_excursiones">
                 <div class="foto_excursion">
 
@@ -164,8 +164,8 @@
             </div>
             </div>
 
-            <div class="contenedor_carta contenedor_excursion--caballos">
-            <div class="cartas_excursiones">
+            <div class="contenedor_carta contenedor_excursion--caballos elemento">
+            <div class="cartas_excursiones elemento">
                 <div class="foto_excursion">
 
                     <div class="slider slider2">
@@ -234,7 +234,7 @@
             </div>
 
 
-            <div class="contenedor_carta  contenedor_excursion--buggys">
+            <div class="contenedor_carta  contenedor_excursion--buggys elemento">
                 <div class="cartas_excursiones">
                     <div class="foto_excursion">
     
@@ -329,7 +329,7 @@
             </div>
             <div class="contenedor_cartas-testimonios">
 
-                <div class="carta-testimonios">
+                <div class="carta-testimonios elemento">
                         <p class="testimonio_texto">
                             "Realmente disfruté de la excursión a la hermosa Playa Macao con Dream Country 
                             Tour. La playa era impresionante y la atención al detalle por parte del equipo 
@@ -347,7 +347,7 @@
                     </div>
                 </div>
 
-                <div class="carta-testimonios">
+                <div class="carta-testimonios elemento">
                     <p class="testimonio_texto">
                         "Los recorridos en buggy con Dream Country Tour fueron emocionantes y divertidos. 
                         Experimenté la emoción de la aventura mientras exploraba la hermosa costa 
@@ -365,7 +365,7 @@
                 </div>
             </div>
 
-            <div class="carta-testimonios">
+            <div class="carta-testimonios elemento">
                 <p class="testimonio_texto">
                     "Mi viaje a la Isla Saona con Dream Country Tour fue simplemente 
                     asombroso. La belleza natural de la isla es incomparable, y el 
@@ -385,7 +385,7 @@
             </div>
         </div>
 
-        <div class="carta-testimonios">
+        <div class="carta-testimonios elemento">
             <p class="testimonio_texto">
                 "Mi familia y yo pasamos un día increíble en la Playa El Macao, 
                 la playa era simplemente espectacular, y la atención al cliente fue 
@@ -515,6 +515,7 @@
     <script src="./scripts/preguntasFrecuentes.js"></script>
     <script src="./scripts/boton_arriba.js"></script>
     <script src="./scripts/carrusel.js"></script>
+    <script src="./scripts/scroll_aparicion.js"></script>
 </body>
 
 </html>
