--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 </head>
 
 <body>
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v18.0" nonce="06iQrl06"></script>
+
 
     <!--? BOTON VOLVER ARRIBA -->
     <div class="boton_flotante">
@@ -411,7 +414,7 @@
     <!--? SECCION NUEVA SIN NOMBRE -->
     <SECtion id="nuevo">
         <div class="contenedor_nuevo">
-
+            <div class="fb-comments" data-href="https://robinfdezz.github.io/pagina_anthony/" data-width="100%" data-numposts="5"></div>
         </div>
     </SECtion>
     <!--! SECCION NUEVA SIN NOMBRE -->
