--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                         </p>
                     <div class="testimonio_persona">
                         <div class="testimonio_perfil">
-                            <img src="./recursos/fotos/personas/persona-1.png" alt="foto perfil">
+                            <img src="./recursos/fotos/personas/1.jpg" alt="foto perfil">
                             <div>
                                 <p class="p-1">María Santos</p>
                                 <img class="p-2" src="./recursos/iconos/puerto-rico.png">
@@ -356,7 +356,7 @@
                     </p>
                 <div class="testimonio_persona">
                     <div class="testimonio_perfil">
-                        <img src="./recursos/fotos/personas/persona-1.png" alt="foto perfil">
+                        <img src="./recursos/fotos/personas/2.jpg" alt="foto perfil">
                         <div>
                             <p class="p-1">Ana García</p>
                             <img class="p-2" src="./recursos/iconos/republica-dominicana.png">
@@ -376,7 +376,7 @@
                 </p>
             <div class="testimonio_persona">
                 <div class="testimonio_perfil">
-                    <img src="./recursos/fotos/personas/persona-1.png" alt="foto perfil">
+                    <img src="./recursos/fotos/personas/3.jpg" alt="foto perfil">
                     <div>
                         <p class="p-1">Javier Ruiz</p>
                         <img class="p-2" src="./recursos/iconos/espana.png">
@@ -395,7 +395,7 @@
             </p>
         <div class="testimonio_persona">
             <div class="testimonio_perfil">
-                <img src="./recursos/fotos/personas/persona-1.png" alt="foto perfil">
+                <img src="./recursos/fotos/personas/4.jpg" alt="foto perfil">
                 <div>
                     <p class="p-1">Carlos Méndez</p>
                     <img class="p-2" src="./recursos/iconos/republica-dominicana.png">
