--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!--! FIN BOTON VOLVER ARRIBA -->
 
     <!--? MENU NAVEGACION -->
-    <section id="inicio_menu">
+    <!-- <section id="inicio_menu">
         <header class="menu_contenedor">
             <div class="menu_contenedor--Logo">
                 <a href="./index.html">
@@ -66,7 +66,7 @@
         <div class="menu_contacto">
             <a class="menu_contacto--link" href="#footer">Contáctanos</a>
         </div>
-    </section>
+    </section> -->
     <!--! FIN MENU NAVEGACION -->
 
     <!--? SECCION PRESENTACION -->
