--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!--! FIN MENU NAVEGACION -->
 
     <!--? SECCION PRESENTACION -->
-    <section id="presentacion">
+    <!-- <section id="presentacion">
         <div class="presentacion_contenedor">
             <div class="presentacion_contenedor--izquierdo">
                 <h1 class="presentacion_titulo">Agencia de viajes <span>Dream Country Tour</span></h1>
@@ -84,7 +84,7 @@
                 <img src="./recursos/fotos/DCT-Logo-PNG-min.png" alt="representacion">
             </div>
         </div>
-    </section>
+    </section> -->
     <!--! FIN SECCION PRESENTACION -->
 
     
