--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!--! FIN BOTON VOLVER ARRIBA -->
 
     <!--? MENU NAVEGACION -->
-    <!-- <section id="inicio_menu">
+    <section id="inicio_menu">
         <header class="menu_contenedor">
             <div class="menu_contenedor--Logo">
                 <a href="./index.html">
@@ -66,11 +66,11 @@
         <div class="menu_contacto">
             <a class="menu_contacto--link" href="#footer">Contáctanos</a>
         </div>
-    </section> -->
+    </section>
     <!--! FIN MENU NAVEGACION -->
 
     <!--? SECCION PRESENTACION -->
-    <!-- <section id="presentacion">
+    <section id="presentacion">
         <div class="presentacion_contenedor">
             <div class="presentacion_contenedor--izquierdo">
                 <h1 class="presentacion_titulo">Agencia de viajes <span>Dream Country Tour</span></h1>
@@ -84,7 +84,7 @@
                 <img src="./recursos/fotos/DCT-Logo-PNG-min.png" alt="representacion">
             </div>
         </div>
-    </section> -->
+    </section>
     <!--! FIN SECCION PRESENTACION -->
 
     
@@ -93,7 +93,7 @@
 
 
     <!--? SECCION PARA LOS VIAJES -->
-    <section id="viajes">
+    <!-- <section id="viajes">
         <div class="contenedor_viajes">
             <h2 class="viajes_titulo">¡Nuestras Excursiones!</h2>
 
@@ -309,7 +309,7 @@
                 </div>
                 <a href="./excursiones.html" class="viajes_saber-mas">Ver más</a>
         </div>
-    </section>
+    </section> -->
     <!--! FIN SECCION PARA LOS VIAJES -->
 
     <!--? SECCION PARA TESTIMONIOS -->
