--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 
     <!--? SECCION PARA LOS VIAJES -->
-    <!-- <section id="viajes">
+    <section id="viajes">
         <div class="contenedor_viajes">
             <h2 class="viajes_titulo">¡Nuestras Excursiones!</h2>
 
@@ -309,11 +309,11 @@
                 </div>
                 <a href="./excursiones.html" class="viajes_saber-mas">Ver más</a>
         </div>
-    </section> -->
+    </section>
     <!--! FIN SECCION PARA LOS VIAJES -->
 
     <!--? SECCION PARA TESTIMONIOS -->
-    <section id="reseñas">
+    <!-- <section id="reseñas">
         <div class="container_testimonios">
             <div class="contenedor_texto-testimonios">
                 <div class="texto_testimonio-titulo">
@@ -406,7 +406,7 @@
     </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--! FIN SECCION PARA TESTIMONIOS -->
 
     <!--? SECCION NUEVA SIN NOMBRE -->
