--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
     <!--! FIN SECCION PARA LOS VIAJES -->
 
     <!--? SECCION PARA TESTIMONIOS -->
-    <!-- <section id="reseñas">
+    <section id="reseñas">
         <div class="container_testimonios">
             <div class="contenedor_texto-testimonios">
                 <div class="texto_testimonio-titulo">
@@ -406,11 +406,11 @@
     </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!--! FIN SECCION PARA TESTIMONIOS -->
 
     <!--? SECCION NUEVA SIN NOMBRE -->
-    <SECtion id="comentario">
+    <section id="comentario">
             <div class="contenedor_comentarios elemento">
                 <h2 class="comentario_titulo">
                     Déjanos un <span>comentario</span>
@@ -427,7 +427,7 @@
                     </div>
                 </div>
             </div>
-    </SECtion>
+    </section>
     <!--! SECCION NUEVA SIN NOMBRE -->
 
     <!--? PIE DE PAGINA O FOOTER -->
