--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
     <!--! FIN SECCION PARA TESTIMONIOS -->
 
     <!--? SECCION NUEVA SIN NOMBRE -->
-    <section id="comentario">
+    <!-- <section id="comentario">
             <div class="contenedor_comentarios elemento">
                 <h2 class="comentario_titulo">
                     Déjanos un <span>comentario</span>
@@ -427,7 +427,7 @@
                     </div>
                 </div>
             </div>
-    </section>
+    </section> -->
     <!--! SECCION NUEVA SIN NOMBRE -->
 
     <!--? PIE DE PAGINA O FOOTER -->
