--- a/index.html
+++ b/index.html
@@ -409,8 +409,8 @@
     </section>
     <!--! FIN SECCION PARA TESTIMONIOS -->
 
-    <!--? SECCION NUEVA SIN NOMBRE -->
-    <!-- <section id="comentario">
+    <!--? SECCION COMENTARIOS -->
+    <section id="comentario">
             <div class="contenedor_comentarios elemento">
                 <h2 class="comentario_titulo">
                     Déjanos un <span>comentario</span>
@@ -427,8 +427,8 @@
                     </div>
                 </div>
             </div>
-    </section> -->
-    <!--! SECCION NUEVA SIN NOMBRE -->
+    </section>
+    <!--! FIN SECCION COMENTARIOS -->
 
     <!--? PIE DE PAGINA O FOOTER -->
     <section id="footer">
