--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 
     <!--? SECCION COMENTARIOS -->
     <section id="comentario">
-            <div class="contenedor_comentarios elemento">
+            <div class="contenedor_comentarios">
                 <h2 class="comentario_titulo">
                     Déjanos un <span>comentario</span>
                 </h2>
